# MailMind

./: .gitignore  README.md  config.json  env.example  gmail_analyzer.py  package-lock.json  package.json  pyproject.toml
config/: config.schema.json  config.yaml
docs/: README.md  api.md  architecture.md  configuration.md  deployment.md  development.md  getting-started.md  ollama-integration.md  rag.md  scheduler.md
mailmind/: __init__.py  analysis.py  config.py  gmail.py  models.py  oauth.py  ollama.py  rag.py  scheduler.py  service.py
mailmind-mcp/: README.md  config.py  gmail_client.py  pyproject.toml  rag_client.py  server.py
mailmind-mcp/tests/: test_integration.py  test_tools.py
mailmind-mcp/tools/: gmail.py  search.py
scripts/: mailmind-service.sh
src/: mcp-server.js
src/auth/: get-refresh-token.js  oauth.js
src/gmail/: fetcher.js  summarizer.js
src/utils/: rate-limiter.js
tests/: conftest.py  test_analysis.py  test_config.py  test_gmail.py  test_gmail_analyzer.py  test_oauth.py  test_ollama.py  test_rag.py  test_scheduler.py  test_service.py
