[project]
name = "mailmind"
version = "1.0.0"
description = "Background Gmail ingestion and RAG service with scheduled sync and Ollama integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # HTTP client used by GmailMCPClient and OllamaClient
    "httpx>=0.27.0",
    # Environment / .env file loading
    "python-dotenv>=1.0.0",
    # Background scheduler — cron expressions + interval triggers (no broker required)
    "apscheduler>=3.10.0",
    # HTTP API server — exposes /query, /ingest, /refresh, /status to Ollama models
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    # Optional semantic-search upgrade (uncomment + swap RagStore.query scorer):
    # "sentence-transformers>=3.0.0",
    # "chromadb>=0.5.0",
]

[project.scripts]
mailmind = "mailmind.service:cli_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
log_cli = true
log_cli_level = "WARNING"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
