[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mailmind-mcp-server"
version = "0.1.0"
description = "Python MCP server for Mailmind Gmail RAG system"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # MCP protocol
    "mcp>=1.0.0",
    # Gmail API
    "google-auth>=2.28.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.120.0",
    # Config
    "pyyaml>=6.0.1",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    # RAG / cache integration
    "pymongo>=4.6.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    # Async HTTP (for Ollama)
    "httpx>=0.27.0",
    # Utilities
    "structlog>=24.1.0",
    "python-dotenv>=1.0.1",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "coverage>=7.4.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.scripts]
mailmind-mcp = "mailmind_mcp.server:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
